# omniTAK

./: .dockerignore  .gitignore  ADB_INTEGRATION.md  BUILD_FIXES_SUMMARY.md  CHANGELOG.md  CHANGELOG_GUI.md  CLAUDE_DEMO.md  Cargo.toml  DEMO_SUMMARY.md  Dockerfile  INSTALLATION_REPORT.md  INTEGRATION_TESTS_SUMMARY.md  INTERACTIVE_DEMO.md  MONITORING_AND_GUI_RECOMMENDATIONS.md  PLUGIN_GUI_API_SUMMARY.md  PLUGIN_SYSTEM_FINAL_REPORT.md  PLUGIN_SYSTEM_INVESTIGATION.md  PLUGIN_SYSTEM_SUMMARY.md  QUICKSTART_TESTING.md  QUICK_DEMO.md  README.md  SETUP_MACOS.md  SETUP_UBUNTU.md  SETUP_WINDOWS.md  TESTING.md  TEST_SUMMARY.md  WEB_UI_README.md  config.example.listeners.yaml  config.example.yaml  gui-servers.yaml  launch-gui.sh  simple_dashboard_server.py
.github/: SPONSOR_TIERS.md  WORKFLOWS_README.md
.github/workflows/: ci.yml  main.yml  release.yml
claude-interface/: COT_HANDLING_NOTES.md  IMPLEMENTATION_STATUS.md  INTEGRATION_PLAN.md  README.md  demo_polygon.py  interactive_demo.py  requirements.txt
claude-interface/claude_tools/: tak_geometry.py  tak_tools.py
claude-interface/omnitak_client/: __init__.py  client.py
config/: discovery-example.yaml  omnitak.yaml
crates/omnitak-adb/: Cargo.toml
crates/omnitak-adb/src/: device.rs  lib.rs  monitor.rs  parser.rs
crates/omnitak-api/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/omnitak-api/examples/: server.rs
crates/omnitak-api/src/: adb.rs  auth.rs  discovery.rs  lib.rs  middleware.rs  rest.rs  static_files.rs  types.rs  websocket.rs
crates/omnitak-api/src/rest/: enrollment.rs  mod.rs  plugins.rs
crates/omnitak-api/tests/: plugin_api_test.rs
crates/omnitak-api/web/static/: api-docs.html  index.html  rapidoc.html  redoc.html
crates/omnitak-cert/: Cargo.toml
crates/omnitak-cert/src/: enrollment.rs  generator.rs  lib.rs
crates/omnitak-client/: Cargo.toml  Cargo.toml.bak
crates/omnitak-client/src/: client.rs  lib.rs  state.rs  tcp.rs  tls.rs  udp.rs  websocket.rs
crates/omnitak-core/: Cargo.toml  README.md  config.example.yaml
crates/omnitak-core/src/: config.rs  discovery_config.rs  error.rs  lib.rs  types.rs
crates/omnitak-core/src/plugins/: bindings.rs  host.rs  loader.rs  loader.rs.bak  mod.rs
crates/omnitak-core/wit/: omnitak-plugins.wit
crates/omnitak-cot/: Cargo.toml.bak  build.rs
crates/omnitak-cot/benches/: parse_bench.rs
crates/omnitak-cot/examples/: parse_demo.rs
crates/omnitak-cot/proto/: contact.proto  cot.proto  group.proto  precisionlocation.proto  status.proto  takv.proto  track.proto
crates/omnitak-cot/src/: event.rs  lib.rs  parser.rs  proto.rs  serializer.rs  validate.rs
crates/omnitak-cot/tests/: detail_parsing_tests.rs
crates/omnitak-datapackage/: Cargo.toml
crates/omnitak-datapackage/src/: builder.rs  content.rs  error.rs  lib.rs  manifest.rs  reader.rs
crates/omnitak-discovery/: Cargo.toml  Cargo.toml.bak  README.md
crates/omnitak-discovery/src/: config.rs  error.rs  lib.rs  service.rs  types.rs
crates/omnitak-filter/: Cargo.toml  PERFORMANCE.md  README.md
crates/omnitak-filter/benches/: filter_bench.rs
crates/omnitak-filter/examples/: basic_filtering.rs  performance_test.rs  routing_config.yaml  unicast_config.yaml
crates/omnitak-filter/src/: affiliation.rs  config.rs  fast_path.rs  lib.rs  router.rs  rules.rs
crates/omnitak-gui/: Cargo.toml  Cargo.toml.bak  README.md
crates/omnitak-gui/src/: api_client.rs  backend.rs  config_io.rs  lib.rs
crates/omnitak-gui/src/ui/: certificates.rs  command_palette.rs  connections.rs  dashboard.rs  datapackage.rs  enrollment.rs  map.rs  messages.rs  mod.rs  offline_maps.rs  plugins.rs  quick_connect.rs  server_dialog.rs  settings.rs
crates/omnitak-plugin-api/: Cargo.toml
crates/omnitak-plugin-api/src/: error.rs  lib.rs  manager.rs  metadata.rs  registry.rs  runtime.rs  security.rs  wasm_filter.rs  wasm_transformer.rs
crates/omnitak-plugin-api/wit/: plugin.wit
crates/omnitak-pool/: ARCHITECTURE.txt  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/omnitak-pool/examples/: complete_system.rs
crates/omnitak-pool/src/: aggregator.rs  concurrency.rs  distributor.rs  health.rs  lib.rs  metrics.rs  pool.rs
demo_server/: Cargo.toml
demo_server/src/: main.rs
docs/: ADB_SETUP.md  FILTERING.md  GUI_FEATURES.md  GUI_SETUP.md  INSTALLATION.md  PLUGIN_API.md  PLUGIN_CONFIGURATION.md  PLUGIN_DEVELOPMENT.md  PLUGIN_GUI_INTEGRATION.md  PLUGIN_QUICKSTART.md  RELEASE_PROCESS.md  WINTAK_FEATURE_PARITY.md  omnitak-gen.md
docs/images/: README.md  save-screenshots.sh
plugins/: registry.json
plugins/example-filter/: BUILD.md  Cargo.toml  EXAMPLES.md  README.md
plugins/example-filter/src/: bindings.rs  host.rs  lib.rs
plugins/example-filter/wit/: message-filter.wit
scripts/: README.md  convert-p12-to-pem.sh  install.sh  test-plugin-api.sh
src/: main.rs  main_integrated.rs  server_listener.rs
tests/: AGGREGATOR_TESTS.md  PHASE5_SUMMARY.md  README.md  plugin_integration_test.rs  smoke_test.rs
tests/common/: mod.rs
tests/fixtures/plugins/: README.md  test-filter-metadata.json  test-transformer-metadata.json
web/: index.html
web-client/: index.html
web/css/: styles.css
web/js/: app.js
wit/: omnitak-plugins.wit
