[workspace]
members = [
    "crates/omnitak-core",
    "crates/omnitak-cot",
    "crates/omnitak-client",
    "crates/omnitak-filter",
    "crates/omnitak-pool",
    "crates/omnitak-cert",
    "crates/omnitak-api",
    "crates/omnitak-gui",
    "crates/omnitak-adb",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["OmniTAK Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/engindearing-projects/omniTAK"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# XML parsing (fast, zero-copy)
quick-xml = { version = "0.37", features = ["serialize"] }

# Protobuf
prost = "0.13"
prost-types = "0.13"
bytes = "1.9"

# TLS - memory-safe implementation
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
webpki-roots = "0.26"

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Concurrency primitives
dashmap = "6.1"
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
config = "0.14"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async channels
async-channel = "2.3"
flume = "0.11"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Regex for filtering
regex = "1.11"

# HTTP client (for federation)
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }

# GUI framework
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
poll-promise = "0.3"

[package]
name = "omnitak"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "omnitak"
path = "src/main_integrated.rs"

[[bin]]
name = "omnitak-adb-setup"
path = "src/bin/omnitak-adb-setup.rs"

[[bin]]
name = "omnitak-gui"
path = "src/bin/omnitak-gui.rs"

[[bin]]
name = "omnitak-gen"
path = "src/bin/omnitak-gen.rs"

[dependencies]
omnitak-core = { path = "crates/omnitak-core" }
omnitak-cot = { path = "crates/omnitak-cot" }
omnitak-client = { path = "crates/omnitak-client" }
omnitak-filter = { path = "crates/omnitak-filter" }
omnitak-pool = { path = "crates/omnitak-pool" }
omnitak-cert = { path = "crates/omnitak-cert" }
omnitak-api = { path = "crates/omnitak-api" }
omnitak-gui = { path = "crates/omnitak-gui" }
omnitak-adb = { path = "crates/omnitak-adb" }

tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
config = { workspace = true }
futures = "0.3"
chrono = { workspace = true }
uuid = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
