[package]
name = "omnitak-demo"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace to make this standalone

[dependencies]
omnitak-pool = { path = "../crates/omnitak-pool" }
omnitak-client = { path = "../crates/omnitak-client" }
omnitak-core = { path = "../crates/omnitak-core" }

tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
