[package]
name = "omnitak-adb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Internal crates
omnitak-core = { path = "../omnitak-core" }
omnitak-cert = { path = "../omnitak-cert" }

# Process execution
tokio-process = "0.2"

# Time handling
chrono = { workspace = true }

# Path handling
walkdir = "2.5"
