[package]
name = "omnitak-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
omnitak-core = { path = "../omnitak-core" }
omnitak-pool = { path = "../omnitak-pool" }
omnitak-client = { path = "../omnitak-client" }
omnitak-filter = { path = "../omnitak-filter" }
omnitak-cot = { path = "../omnitak-cot" }
omnitak-cert = { path = "../omnitak-cert" }
omnitak-adb = { path = "../omnitak-adb" }
omnitak-discovery = { path = "../omnitak-discovery" }
omnitak-plugin-api = { path = "../omnitak-plugin-api", features = ["openapi"] }
omnitak-datapackage = { path = "../omnitak-datapackage" }

# Axum web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-gzip", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.24"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.37"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# OpenAPI documentation
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }

# Security
rustls = { version = "0.23", features = ["std", "ring"] }
rustls-pemfile = "2.2"
tokio-rustls = { version = "0.26", features = ["ring"] }

# Static file embedding
rust-embed = { version = "8.5", features = ["compression"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# P12/PKCS12 support
p12 = "0.6"

# Utilities
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
governor = "0.7"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
