[package]
name = "omnitak-cert"
version = "0.1.0"
edition = "2024"

[dependencies]
# TLS and certificate handling
rustls = { version = "0.23", features = ["std", "ring"] }
rustls-pemfile = "2.2"
p12 = "0.6"  # PKCS#12 support

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Encoding/decoding
base64 = "0.22"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
