[package]
name = "omnitak-cert"
version = "0.1.0"
edition = "2024"

[dependencies]
# TLS and certificate handling
rustls = { version = "0.23", features = ["std", "ring"] }
rustls-pemfile = "2.2"
p12 = "0.6"  # PKCS#12 support

# X.509 certificate parsing
x509-parser = "0.16"

# ZIP file extraction
zip = "2.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Encoding/decoding
base64 = "0.22"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Filesystem operations
tempfile = "3.10"

# Time handling
chrono = "0.4"

# HTTP client for enrollment
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async runtime (for enrollment)
tokio = { version = "1.43", features = ["full"] }
serde_json = "1.0"
