[package]
name = "omnitak-cert"
version = "0.1.0"
edition = "2021"

[dependencies]
# TLS and certificate handling
rustls = { version = "0.23", features = ["std", "ring"] }
rustls-pemfile = "2.2"
p12 = "0.6"  # PKCS#12 support

# X.509 certificate parsing
x509-parser = "0.16"

# Certificate generation
rcgen = { version = "0.13", features = ["x509-parser"] }

# ZIP file extraction
zip = "2.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Encoding/decoding
base64 = "0.22"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Filesystem operations
tempfile = "3.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"  # For rcgen compatibility

# HTTP client for enrollment
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async runtime (for enrollment)
tokio = { version = "1.43", features = ["full"] }
serde_json = "1.0"

# UUID for unique identifiers
uuid = { version = "1.11", features = ["v4"] }
