[package]
name = "omnitak-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
omnitak-discovery = { path = "../omnitak-discovery" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# Configuration
config = { workspace = true }

# Logging
tracing = { workspace = true }
