[package]
name = "omnitak-datapackage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TAK Data Package (.dpk/.zip) support for OmniTAK"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# XML handling for manifest
quick-xml = { workspace = true }

# ZIP file handling
zip = { version = "2.2", features = ["deflate", "time"] }

# File system operations
walkdir = "2.5"
tempfile = "3.15"

# UUID for package IDs
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Path manipulation
path-absolutize = "3.1"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.15"
