[package]
name = "omnitak-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal crates
omnitak-core = { path = "../omnitak-core" }
omnitak-pool = { path = "../omnitak-pool" }
omnitak-api = { path = "../omnitak-api" }
omnitak-cot = { path = "../omnitak-cot" }
omnitak-plugin-api = { path = "../omnitak-plugin-api" }
omnitak-cert = { path = "../omnitak-cert" }
omnitak-datapackage = { path = "../omnitak-datapackage" }

# GUI framework
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
poll-promise = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Async channels
async-channel = { workspace = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Map visualization
walkers = "0.49"

# File picker
rfd = "0.15"

# Offline maps (MBTiles)
rusqlite = { version = "0.33", features = ["bundled"] }

# GeoJSON/KML parsing
geojson = "0.24"
quick-xml = "0.37"

# Base64 for tile data
base64 = "0.22"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
